# agendfy

./: .gitignore  LICENSE  README.md  agendfy.db  pyproject.toml
agendfy/: __main__.py  app.py  config.py
agendfy/api/v1/: __init__.py  appointment.py  company.py  hello_world.py  user.py
agendfy/database/: database.py
agendfy/models/: models.py
agendfy/tests/: __init__.py  test_company.py
